--- a/FSharp/LFP/HelloWorldFS/App/App.fsproj
+++ b/FSharp/LFP/HelloWorldFS/App/App.fsproj
@@ -1,16 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="Lesson2.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\HelloWorldLib\HelloWorldlib.fsproj" />
   </ItemGroup>
-
 </Project>
