--- a/FSharp/LFP/HelloWorldFS/App/App.fsproj
+++ b/FSharp/LFP/HelloWorldFS/App/App.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Lesson5.fsx" />
     <Compile Include="Lesson4.fsx" />
     <Compile Include="Lesson3.fsx" />
     <Compile Include="Lesson2.fs" />
